# BarriersToUniversalReasoningWTransformers

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/models/: gpt2-4096-ape.json  gpt2-4096-small.json  gpt2-4096-xsmall.json
config/prompts/: boolean_prompting.yaml  permutation_prompting.yaml
config/results/: boolean.yaml  parity.yaml  permutation.yaml  permutation_binary.yaml
config/tasks/: boolean.yaml  boolean_prompting.yaml  parity_delta.yaml  parity_std.yaml  permutation_a.yaml  permutation_b.yaml  permutation_binary.yaml  permutation_naive.yaml  permutation_prompting.yaml
custom_tokenizers/boolean/: added_tokens.json  tokenizer_config.json  vocab.json
custom_tokenizers/parity/: added_tokens.json  tokenizer_config.json  vocab.json
custom_tokenizers/permutation/: added_tokens.json  tokenizer_config.json  vocab.json
custom_tokenizers/permutation_binary/: added_tokens.json  tokenizer_config.json  vocab.json
src/lengthgen/: build_tokenizer.py  callbacks.py  collators.py  constants.py  evaluate_model.py  launch.py  launch_prompting.py  paths.py  prompting.py  test_tokenizer.py  train.py  util.py
src/lengthgen/prompting_variables/: README.md  data_python.py  run_api.py  run_models.sh
src/lengthgen/results/: eval_test.py  plot.py  select_runs.py
src/lengthgen/scripts/: analyze_permutation_binary.py  plot_ood_id_acc.py
src/lengthgen/tasks/: loader.py  registry.py
src/lengthgen/tasks/implementations/: boolean_eval.py  boolean_prompting.py  parity.py  permutation.py  (+3 more)
submit/: exe_eval.sh  exe_main_results.sh  exe_sweep.sh
