[project]
name = "lengthgen"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Kraus",email = "okraus@lst.uni-saarland.de"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    
    "pandas (>=2.1.1,<2.2.0)",
    "matplotlib (>=3.7.2,<3.8.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "torch (>=2.7.0,<2.8.0)",
    "datasets",
    "tokenizers",
    "transformers (>=4.50.0)",
    #"vllm (>=0.8.5,<=0.9.0)",
    "openai (>=2.9.0)",
    "accelerate",
    "sympy (>=1.14.0)",
    "spacy",
    "thinc",
    "wandb",
    "click",
    "tqdm",
    "evaluate",
    "bert-score",
    "nltk",
    "rouge-score",
    "numpy",
    "jupyterlab",
    "debugpy",
    "pyyaml",
    "google-genai",
    "fire",
    "trl",
    "together"

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
